2008-09-17  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:FILE-SIZE) [WIN32_NATIVE]:
	surround the GetFileSizeEx call with begin/end_system_call;
	use sint64_to_I instead of off_to_I for the return value

2008-09-17  Sam Steingold  <sds@gnu.org>

	* makemake.in (EVERY_INCLUDES_H): fix the logic for adding config.h

2008-09-16  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c: include <sys/param.h>
	(MAXHOSTNAMELEN): fall back to 256 (not 64)
	(MAXPATHLEN): fall back to 4096 (not 1024)
	* modules/syscalls/configure.in: check for <sys/param.h> (for woe32)
	* unix.d: include <sys/param.h> just once
	(MAXHOSTNAMELEN): fall back to 256 (not 64)

2008-09-15  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:DOMAINNAME)
	(POSIX::%SETDOMAINNAME): add
	* modules/syscalls/posix.lisp (domainname): add defsetf and export

2008-09-15  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:USER-SHELLS): implement
	* modules/syscalls/posix.lisp (USER-SHELLS): export

2008-09-15  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c
	(grp_to_lisp): use gid_to_I instead of UL_to_I
	(GROUP-INFO): use integerp instead of uint32_p

2008-09-15  Sam Steingold  <sds@gnu.org>

	* configure: fix bug #[ 2110337 ]: libsigsegv configure hints
	suggest "rm -f ${DIRNAME}/config.cache"

2008-09-15  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (*http-log-stream*): defvar
	(open-http): accept :LOG argument
	(http-proxy, open-http, get-clhs-map, get-string-map)
	(ensure-impnotes-map): use *HTTP-LOG-STREAM* for logging
	* init.lisp (*http-log-stream*): export from CUSTOM

2008-09-15  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script) [win32]: disable $? tests because
	%ERRORLEVEL% on woe32 can be reset to 0 all of a sudden
	http://article.gmane.org/gmane.lisp.clisp.devel/18967
	Reported by Yaroslav Kavenchuk <kavenchuk@tut.by>

2008-09-13  Sam Steingold  <sds@gnu.org>

	* disassem.lisp (disassemble-machine-code): update for the